@@ -1,0 +1,1 @@
+@email{bug-texinfo, same place}
